log
Sat 22 Mar 2025 01:11:40 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:8: error: unused variable ‘suma’ [-Werror=unused-variable]
   61 |    int suma = 0;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
3f6cb15
Sat 22 Mar 2025 01:11:54 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
aefcea6
Sat 22 Mar 2025 01:24:17 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:5: error: ‘dato’ undeclared (first use in this function)
   62 |    *dato = (int*)first(L);
      |     ^~~~
exercises.c:62:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f3d53d6
Sat 22 Mar 2025 01:24:33 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c8427f8
Sat 22 Mar 2025 01:25:21 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:15: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |    int dato = first(L);
      |               ^~~~~
exercises.c:63:15: error: comparison between pointer and integer [-Werror]
   63 |    while(dato != NULL)
      |               ^~
exercises.c:66:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |       dato = next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
290a787
Sat 22 Mar 2025 01:25:29 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |       suma += dato;
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
f4c09e6
Sat 22 Mar 2025 01:25:51 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
714ce85
Sun 23 Mar 2025 07:02:54 PM UTC: 
 exercises.c | 27 ++++++++++++++++++++-------
 1 file changed, 20 insertions(+), 7 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:89:17: error: comparison between pointer and integer [-Werror]
   89 |       if(numero == elem)
      |                 ^~
exercises.c:91:21: error: passing argument 1 of ‘popCurrent’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   91 |          popCurrent(numero);
      |                     ^~~~~~
      |                     |
      |                     int *
In file included from exercises.c:6:
arraylist.h:32:24: note: expected ‘List *’ but argument is of type ‘int *’
   32 | void *popCurrent(List *L);
      |                  ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
e6a9dbf
Sun 23 Mar 2025 07:03:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:87:18: error: comparison between pointer and integer [-Werror]
   87 |    while(*numero != NULL)
      |                  ^~
exercises.c:89:17: error: comparison between pointer and integer [-Werror]
   89 |       if(numero == elem)
      |                 ^~
exercises.c:91:21: error: passing argument 1 of ‘popCurrent’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   91 |          popCurrent(numero);
      |                     ^~~~~~
      |                     |
      |                     int *
In file included from exercises.c:6:
arraylist.h:32:24: note: expected ‘List *’ but argument is of type ‘int *’
   32 | void *popCurrent(List *L);
      |                  ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
363e962
Sun 23 Mar 2025 07:03:38 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:91:21: error: passing argument 1 of ‘popCurrent’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   91 |          popCurrent(numero);
      |                     ^~~~~~
      |                     |
      |                     int *
In file included from exercises.c:6:
arraylist.h:32:24: note: expected ‘List *’ but argument is of type ‘int *’
   32 | void *popCurrent(List *L);
      |                  ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
54c2bd6
Sun 23 Mar 2025 07:24:15 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
ef3a569
Sun 23 Mar 2025 08:05:20 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:107:22: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  107 |    Stack* auxiliar = createStack();
      |                      ^~~~~~~~~~~
      |                      create_stack
exercises.c:107:22: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c:110:16: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  110 |    while((dato = popFront(P1) != NULL))
      |                ^
exercises.c:112:17: error: ‘aux’ undeclared (first use in this function)
  112 |       pushFront(aux, dato);
      |                 ^~~
exercises.c:112:17: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:114:16: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  114 |    while((dato = popFront(auxiliar) != NULL))
      |                ^
cc1: all warnings being treated as errors
Compilation failed
e285f0e
Sun 23 Mar 2025 08:05:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:110:16: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  110 |    while((dato = popFront(P1) != NULL))
      |                ^
exercises.c:112:17: error: ‘aux’ undeclared (first use in this function)
  112 |       pushFront(aux, dato);
      |                 ^~~
exercises.c:112:17: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:114:16: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  114 |    while((dato = popFront(auxiliar) != NULL))
      |                ^
cc1: all warnings being treated as errors
Compilation failed
f4c26c6
Sun 23 Mar 2025 08:05:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:110:16: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  110 |    while((dato = popFront(P1) != NULL))
      |                ^
exercises.c:114:16: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  114 |    while((dato = popFront(auxiliar) != NULL))
      |                ^
cc1: all warnings being treated as errors
Compilation failed
9699756
Sun 23 Mar 2025 08:07:02 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:110:40: error: expected statement before ‘)’ token
  110 |    while((dato = popFront(P1)) != NULL))
      |                                        ^
Compilation failed
99c7287
